<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    android:elevation="2dp"
    android:background="#D0F0FD"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#A8E6CF"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/fecha_fecha"
            android:textColor="#000"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_tipo_notificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tipo_de_notificacion_tipo"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/nombre_nombre_notificacion"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/direccion_direccion"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_horario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horario_horario"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

</RelativeLayout>
