<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="2dp"
    android:background="#D0F0FD"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#A8E6CF"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_cita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cita"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tv_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/fecha"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_cuidador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/cuidador"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_ubicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ubicacion"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>
