<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar_cuidador"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/camera_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:src="@drawable/agregar_foto" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:fontFamily="@font/roboto_medium"
            android:inputType="textPersonName"
            android:layout_marginBottom="8dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:background="@color/white"/>

        <EditText
            android:id="@+id/address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:fontFamily="@font/roboto_medium"
            android:inputType="textPostalAddress"
            android:layout_marginBottom="8dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:background="@color/white"/>

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:fontFamily="@font/roboto_medium"
            android:inputType="phone"
            android:layout_marginBottom="8dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:background="@color/white"/>

        <EditText
            android:id="@+id/schedule_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/horario"
            android:fontFamily="@font/roboto_medium"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:background="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:backgroundTint="#4CAF50"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="16dp"
                android:drawableLeft="@drawable/baseline_save_24"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:backgroundTint="#F44336"
                android:textColor="#FFFFFF"
                android:drawableLeft="@drawable/baseline_cancel_24"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
