<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0F7FA"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_title"
        android:layout_width="132dp"
        android:layout_height="108dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/icono_cuidadores_activos"
        android:src="@drawable/estado_activos"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_cuidadores_activos"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@id/img_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tv_total_cuidadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_cuidadores_activos"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <!-- Lista dinámica de cuidadores -->
    <ScrollView
        android:id="@+id/scroll_cuidadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_total_cuidadores"
        android:layout_marginTop="16dp">

    </ScrollView>

    <Button
        android:id="@+id/btn_close"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:backgroundTint="#4A90E2"
        android:text="@string/cerrar_ventana"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />


</RelativeLayout>
