<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".FormularioCuidador">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvCaretakerRegisterTitle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/registro_de_cuidador"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:background="#FFFFFF"
                android:padding="8dp"
                android:elevation="4dp" />

            <ImageView
                android:id="@+id/ivProfilePicture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/foto_de_perfil_cuidador"
                android:elevation="6dp"
                tools:ignore="ImageContrastCheck" />

            <Button
                android:id="@+id/btnUploadPhoto"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:text="@string/subir_foto_cuidador"
                android:backgroundTint="#4C9BB8"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/roboto_bolditalic"
                android:elevation="4dp"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext"
                android:elevation="2dp"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/nombre_completo_cuidador"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:elevation="2dp"
                android:fontFamily="@font/roboto_lightitalic"
                android:hint="@string/correo_electronico_cuidador"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:elevation="2dp"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/numero_de_telefono_cuidador"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/etBirthDate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:elevation="2dp"
                android:fontFamily="@font/roboto_lightitalic"
                android:hint="@string/fecha_de_nacimiento_cuidador"
                android:inputType="date"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/etSpecialty"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:elevation="2dp"
                android:fontFamily="@font/roboto_lightitalic"
                android:hint="@string/especialidad_cuidador"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/etAvailableHours"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:elevation="2dp"
                android:fontFamily="@font/roboto_lightitalic"
                android:hint="@string/horarios_disponibles_cuidador"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="Autofill,TextContrastCheck,TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:elevation="2dp"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/contraseña_cuidador"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_edittext"
                android:elevation="2dp"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/repetir_contraseña_cuidador"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/registrar_cuidador"
                android:backgroundTint="#4C9BB8"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/roboto_bold"
                android:elevation="4dp"
                android:layout_marginTop="24dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>