<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#F5F5F5"
    tools:context=".FormularioAdministrador">

    <TextView
        android:id="@+id/tvAdminRegisterTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_administrador"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        android:background="#FFFFFF"
        android:padding="8dp"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="8dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/foto_de_perfil"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAdminRegisterTitle"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnUploadPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subir_foto"
        android:fontFamily="@font/roboto_bolditalic"
        android:elevation="4dp"
        android:backgroundTint="#4A90E2"
        android:textColor="#FFFFFF"
        android:textColorHint="#000000"
        app:layout_constraintTop_toBottomOf="@id/ivProfilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext"
        android:elevation="2dp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/nombre_completo"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUploadPhoto"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:elevation="2dp"
        android:fontFamily="@font/roboto_lightitalic"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFullName"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:elevation="2dp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/numero_de_telefono"
        android:inputType="phone"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etRole"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:elevation="2dp"
        android:fontFamily="@font/roboto_lightitalic"
        android:hint="@string/cargo_o_rol_ej_administrador_general"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPhoneNumber"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:elevation="2dp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRole"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:elevation="2dp"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/repetir_contraseña"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:fontFamily="@font/roboto_bolditalic"
        android:elevation="4dp"
        android:backgroundTint="#4A90E2"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>